--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Erickson Pasaribu & Fransiska Tampubolon Weding</title>
+    <title>Erickson Pasaribu & Fransiska Tampubolon Wedding</title>
     <!-- bootstrap -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
@@ -21,6 +21,10 @@
     />
     <!-- style css -->
     <link rel="stylesheet" href="style.css" />
+
+    <!-- simply countdown -->
+    <link rel="stylesheet" href="countdown/simplyCountdown.theme.default.css" />
+    <script src="countdown/simplyCountdown.min.js"></script>
   </head>
   <body>
     <!-- hero -->
@@ -32,9 +36,34 @@
         <h4>Kepada Bapak/Ibu/Saudara/i,</h4>
         <h1>Erickson Pasaribu & Fransiska Tampubolon</h1>
         <p>Akan melangsungkan pernikahan pada:</p>
-        <a href="#" class="btn btn-lg">Lihat Undangan</a>
+        <!-- countdown -->
+        <div class="simply-countdown"></div>
+
+        <a href="#" class="btn btn-lg mt-4">Lihat Undangan</a>
       </main>
     </section>
+    <!-- end of hero -->
+
+    <!-- script -->
+
+    <!-- countdown -->
+    <script>
+      simplyCountdown(".simply-countdown", {
+        year: 2024, // required
+        month: 3, // required
+        day: 17, // required
+        hours: 0, // Default is 0 [0-23] integer
+        words: {
+          //words displayed into the countdown
+          days: { singular: "hari", plural: "hari" },
+          hours: { singular: "jam", plural: "jam" },
+          minutes: { singular: "menit", plural: "menit" },
+          seconds: { singular: "detik", plural: "detik" },
+        },
+      });
+    </script>
+
+    <!-- bootstrap -->
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
