--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
       integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
       crossorigin="anonymous"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css"
+    />
 
     <!-- google font -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -39,10 +43,293 @@
         <!-- countdown -->
         <div class="simply-countdown"></div>
 
-        <a href="#" class="btn btn-lg mt-4">Lihat Undangan</a>
+        <a href="#home" class="btn btn-lg mt-4">Lihat Undangan</a>
       </main>
     </section>
     <!-- end of hero -->
+
+    <!-- navbar -->
+    <nav class="navbar navbar-expand-md bg-transparent sticky-top my-navbar">
+      <div class="container">
+        <a class="navbar-brand" href="#">Erickson & Fransiska</a>
+        <button
+          class="navbar-toggler border-0"
+          type="button"
+          data-bs-toggle="offcanvas"
+          data-bs-target="#offcanvasNavbar"
+          aria-controls="offcanvasNavbar"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div
+          class="offcanvas offcanvas-end"
+          tabindex="-1"
+          id="offcanvasNavbar"
+          aria-labelledby="offcanvasNavbarLabel"
+        >
+          <div class="offcanvas-header">
+            <h5 class="offcanvas-title" id="offcanvasNavbarLabel">Card List</h5>
+            <button
+              type="button"
+              class="btn-close"
+              data-bs-dismiss="offcanvas"
+              aria-label="Close"
+            ></button>
+          </div>
+          <div class="offcanvas-body">
+            <div class="navbar-nav ms-auto">
+              <a class="nav-link" href="#home">Home</a>
+              <a class="nav-link" href="#info">Info</a>
+              <a class="nav-link" href="#gallery">Gallery</a>
+              <a class="nav-link" href="#rsvp">RSVP</a>
+              <a class="nav-link" href="#gifts">Gifts</a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </nav>
+    <!-- end of navbar -->
+
+    <!--  Home -->
+    <section id="home" class="home">
+      <div class="container">
+        <div class="row justify-content-center">
+          <div class="col-md-8 text-center">
+            <h2>Acara Pernikahan</h2>
+            <h3>
+              Diselenggarakan pada 16 Maret 2024 di Singkawang, Kalimantan
+              Barat.
+            </h3>
+            <p>
+              Oleh karena itu, dengan segala hormat, kami bermaksud untuk
+              mengundang Bapak/Ibu, Saudara/i, untuk hadir pada acara pernikahan
+              kami.
+            </p>
+          </div>
+        </div>
+      </div>
+
+      <div class="row couple">
+        <div class="col-lg-6">
+          <div class="row">
+            <div class="col-8 text-end">
+              <h3>Erickson Pasaribu</h3>
+              <p>
+                Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+                Nesciunt eveniet repellat tenetur voluptas illo. A enim veniam
+                assumenda repellat esse! Quisquam quas et doloribus officiis rem
+                id. Dolores, repudiandae earum?
+              </p>
+              <p class="ortu">
+                Putra dari Bpk B. Pasaribu & Ibu H Br. Sihombing
+              </p>
+            </div>
+            <div class="col-4">
+              <img
+                src="img/sample.jpg"
+                alt="Erickson Pasaribu"
+                class="img-responsive rounded-circle"
+              />
+            </div>
+          </div>
+        </div>
+
+        <div class="col-lg-6">
+          <div class="row">
+            <div class="col-4">
+              <img
+                src="img/sample.jpg"
+                alt="Erickson Pasaribu"
+                class="img-responsive rounded-circle"
+              />
+            </div>
+            <div class="col-8">
+              <h3>Fransiska Tampubolon</h3>
+              <p>
+                Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+                Nesciunt eveniet repellat tenetur voluptas illo. A enim veniam
+                assumenda repellat esse! Quisquam quas et doloribus officiis rem
+                id. Dolores, repudiandae earum?
+              </p>
+              <p class="ortu">
+                Putri dari Bpk T. Tampubolon & Ibu M Br. Siagian
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- <section id="home" class="home w-100 h-100 p-3 mx-auto text-center">
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-6">
+            <h1 class="display-4">Erickson & Fransiska</h1>
+            <p class="lead">
+              Kami akan melangsungkan pernikahan pada tanggal 17 Maret 2024
+            </p>
+            <p>
+              Kami mengundang Bapak/Ibu/Saudara/i untuk hadir dan memberikan doa
+              restu kepada kami
+            </p>
+            <a href="#" class="btn btn-lg mt-4">Lihat Undangan</a>
+          </div>
+          <div class="col-lg-6">
+            <img src="img/undangan.png" alt="undangan" class="img-fluid" />
+          </div>
+        </div>
+      </div>
+    </section> -->
+    <!-- End Home -->
+
+    <!-- info -->
+    <section id="info" class="info">
+      <div class="container">
+        <div class="row justify-content-center">
+          <div class="col-md-8 col-10 text-center">
+            <h2>Informasi Acara</h2>
+            <p class="alamat">
+              Alamat : Gedung Samudra, Singkawang. <br />
+              Jl. Yohana Godang, Pasiran, Kec. Singkawang Bar., Kota Singkawang,
+              Kalimantan Barat 79123
+            </p>
+            <a
+              href="https://maps.app.goo.gl/ASMNfTyDS7MWr1uB9"
+              class="btn btn-outline-light my-3 rounded"
+              target="_blank"
+            >
+              lihat lokasi</a
+            >
+            <p class="description">
+              Diharapkan untuk tidak salah alamat dan tanggal. Manakala tiba di
+              tujuan namun tidak ada tanda-tanda sedang dilangsungkan pernikahan
+              boleh jadi Anda salah jadwal, atau salah alamat.
+            </p>
+          </div>
+        </div>
+
+        <div class="row justify-content-center mt-4">
+          <div class="col-md-5 col-10 mb-5">
+            <div class="card text-center text-bg-light">
+              <div class="card-header">Pemberkatan Pernikahan Kudus</div>
+              <div class="card-body">
+                <div class="row justify-content-center">
+                  <div class="col-md-6">
+                    <i class="bi bi-clock d-block"></i>
+                    <span>10.00 WIB</span>
+                  </div>
+                  <div class="col-md-6">
+                    <i class="bi bi-calendar-event d-block"></i>
+                    <span>Sabtu, 16 Maret 2024</span>
+                  </div>
+                </div>
+              </div>
+              <div class="card-footer">
+                Acara dilakukan di Gereja HKBP Resort Singkawang, Jl. Firdaus
+                No.76 Singkawang
+              </div>
+            </div>
+          </div>
+
+          <div class="col-md-5 col-10">
+            <div class="card text-center text-bg-light">
+              <div class="card-header">Resepsi dan Acara Adat</div>
+              <div class="card-body">
+                <div class="row justify-content-center">
+                  <div class="col-md-6">
+                    <i class="bi bi-clock d-block"></i>
+                    <span>12.00 – 15.00 WIB</span>
+                  </div>
+                  <div class="col-md-6">
+                    <i class="bi bi-calendar-event d-block"></i>
+                    <span>Sabtu, 16 Maret 2024</span>
+                  </div>
+                </div>
+              </div>
+              <div class="card-footer">
+                Acara dilakukan di Gedung Samudra, Jl. Yohana Godang SIngkawang
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- end info -->
+
+    <!-- gallery -->
+    <section id="gallery" class="gallery">
+      <div class="gallery">
+        <div class="row justify-content-center mb-5">
+          <div class="col-md-8 col-10 text-center">
+            <span>Foto Kami</span>
+            <h2>Gallery Foto</h2>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit.</p>
+          </div>
+        </div>
+
+        <div
+          class="row row-cols-lg-4 row-cols-md-3 row-cols-sm-2 row-cols-1 justify-content-center"
+        >
+          <div class="col mt-3">
+            <a
+              href="img/gallery/img-1.jpg"
+              data-toggle="lightbox"
+              data-caption="Erickson & Fransiska 1"
+              data-gallery="gallery"
+            >
+              <img
+                src="img/gallery/thumbnail/resize-1.jpg"
+                alt="Erickson & Fransiska 1"
+                class="img-fluid w-100 rounded"
+              />
+            </a>
+          </div>
+          <div class="col mt-3">
+            <a
+              href="img/gallery/img-2.jpg"
+              data-toggle="lightbox"
+              data-caption="Erickson & Fransiska 2"
+              data-gallery="gallery"
+            >
+              <img
+                src="img/gallery/thumbnail/resize-2.jpg"
+                alt="Erickson & Fransiska 2"
+                class="img-fluid w-100 rounded"
+              />
+            </a>
+          </div>
+          <div class="col mt-3">
+            <a
+              href="img/gallery/image-3.jpg"
+              data-toggle="lightbox"
+              data-caption="Erickson & Fransiska 3"
+              data-gallery="gallery"
+            >
+              <img
+                src="img/gallery/thumbnail/resize-3.jpg"
+                alt="Erickson & Fransiska 3"
+                class="img-fluid w-100 rounded"
+              />
+            </a>
+          </div>
+          <div class="col mt-3">
+            <a
+              href="img/gallery/image-4.jpg"
+              data-toggle="lightbox"
+              data-caption="Erickson & Fransiska 4"
+              data-gallery="gallery"
+            >
+              <img
+                src="img/gallery/thumbnail/resize-4.jpg"
+                alt="Erickson & Fransiska 4"
+                class="img-fluid w-100 rounded"
+              />
+            </a>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- end gallery -->
 
     <!-- script -->
 
@@ -51,8 +338,8 @@
       simplyCountdown(".simply-countdown", {
         year: 2024, // required
         month: 3, // required
-        day: 17, // required
-        hours: 0, // Default is 0 [0-23] integer
+        day: 15, // required
+        hours: 12, // Default is 0 [0-23] integer
         words: {
           //words displayed into the countdown
           days: { singular: "hari", plural: "hari" },
@@ -63,11 +350,26 @@
       });
     </script>
 
+    <script>
+      const stickyTop = document.querySelector(".sticky-top");
+      const offcanvas = document.querySelector(".offcanvas");
+
+      offcanvas.addEventListener("show.bs.offcanvas", () => {
+        stickyTop.style.overflow = "visible";
+      });
+
+      offcanvas.addEventListener("hidden.bs.offcanvas", function () {
+        stickyTop.style.overflow = "hidden";
+      });
+    </script>
+
     <!-- bootstrap -->
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
       crossorigin="anonymous"
     ></script>
+
+    <script src="https://cdn.jsdelivr.net/npm/bs5-lightbox@1.8.3/dist/index.bundle.min.js"></script>
   </body>
 </html>
